[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://dirt.png" type="Texture" id=2]
[ext_resource path="res://Stone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Goals.tscn" type="PackedScene" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Crates.tscn" type="PackedScene" id=7]
[ext_resource path="res://Credits.gd" type="Script" id=8]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
speed = 3.0

[node name="Tween" type="Tween" parent="."]

[node name="Dirt" type="Sprite" parent="."]
modulate = Color( 0.7, 0.7, 0.7, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Stone" parent="." instance=ExtResource( 3 )]

[node name="Crates" parent="." instance=ExtResource( 7 )]

[node name="Goals" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 384, 320 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 32, 32 )
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Reset" type="Button" parent="UI"]
margin_left = 720.0
margin_top = 512.0
margin_right = 816.0
margin_bottom = 560.0
theme = ExtResource( 5 )
text = "Reset"

[node name="Next" type="Button" parent="UI"]
margin_left = 720.0
margin_top = 640.0
margin_right = 816.0
margin_bottom = 688.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Next"

[node name="Prev" type="Button" parent="UI"]
margin_left = 720.0
margin_top = 576.0
margin_right = 816.0
margin_bottom = 624.0
theme = ExtResource( 5 )
text = "Prev"

[node name="Score" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 79.0
theme = ExtResource( 5 )
text = "Level 1
Moves 0"

[node name="Credits" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 656.0
margin_right = 544.0
margin_bottom = 686.0
theme = ExtResource( 5 )
text = "Levels by David Skinner, sasquatch@bentonrea.com"
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="UI/Credits"]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="UI/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="UI/Prev" to="." method="_on_Prev_pressed"]
[connection signal="timeout" from="UI/Credits/Timer" to="UI/Credits" method="_on_Timer_timeout"]
